[package]
name = "pumpmev"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.17.0"
solana-client = "1.17.0"
solana-transaction-status = "1.17.0"
solana-account-decoder = "1.17.0"
serde = "1.0.215"
futures-util = "0.3.31"
tokio = "1.41.1"
log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"
borsh = "0.10.3"
reqwest = { version = "0.12.4", features = ["json", "stream"] }

jito-protos = { path = "../jito_protos" }
jito-searcher-client = { path = "../searcher_client" }

tonic = { version = "0.10", features = [
  "tls",
  "tls-roots",
  "tls-webpki-roots",
] }
spl-associated-token-account = { version = "2.2.0", features = [
  "no-entrypoint",
] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
serde_json = "1.0.133"

# raydium-library = { git = "https://github.com/raydium-io/raydium-library" }